run process procedure refactored